--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "lodash": "^4.17.21",
     "notistack": "^2.0.8",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.42.1",
     "react-i18next": "^12.1.4",
@@ -72,6 +74,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/nprogress": "^0.2.0",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-lazy-load-image-component": "^1.5.2",
