--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^1.2.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "emoji-picker-react": "^4.6.11",
     "framer-motion": "^8.4.7",
     "fullcalendar": "^6.1.10",
     "history": "^5.3.0",
